# angry-test

./: .env.sample  README.md  manage.py  pyproject.toml
angry_test/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: check_auth.js
templates/users/: base.html  index.html
templates/users/includes/: inc_menu.html
users/: models.py  services.py  urls.py  views.py
users/management/commands/: bot.py
users/migrations/: 0001_initial.py
