[tool.poetry]
name = "angry-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "angry_test"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-dotenv = "^1.0.1"
pytelegrambotapi = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
